# astrolog

./: 541f.txt  541g.txt  542C.txt  542D.txt  542E.txt  542F.txt  542G.txt  542H.txt  542I.txt  542J.txt  AUTHORS  COPYING  ChangeLog  Hendrix_Jimi  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  astars.txt  astrlog3.url  changes.541f.txt  changes.542B.txt  configure  configure.in  history.txt  install-sh  makefile.cyg  makefile.msc  makefile.unx  makefile.xxx  mpcorb2solex.pl  power.txt  readme.541  readme.542J  vip.tgz  watlas.url
ephe/: Makefile.am  Makefile.in  alltno.sh  astorb2orb9.sh  atlas.txt  doastfle.sh  dobarinit.sh  docentfle.sh  dofitorb.sh  dofitorbneo.sh  dofitorbunn.sh  doorb9astdir.sh  doorb9tno.sh  dotnofle.sh  fitobs.inp  fitobs.inp.riyalfleast  fixstars.cat  gensxastdir.sh  gensxtno.sh  gentartno.sh  inbaricsun.opt.in  input.fop  input.foptno  mkastdir.sh  seasnam.txt  seasnam_named.txt  seasnam_tno.txt  select.sh  selecttno.sh
ephe/ast136/: Makefile.am  Makefile.in
exteph/: Makefile.am  Makefile.in  asteroid.fle  centaurs.fle  long.fle  sxPioneer11.sx1  tnpsdo.fle
src/: AspectSet.cpp  AspectSet.h  AspectSetData.cpp  AspectSetData.h  AstroColor.cpp  AstroColor.h  AstroCommand.cpp  AstroCommand.h  AstroCommandData.cpp  AstroCommandData.h  AstroInfo.cpp  AstroInfo.h  AstroInfoData.cpp  AstroInfoData.h  AstroMenu.cpp  AstroMenu.h  AstroObjectSet.cpp  AstroObjectSet.h  AstroObjectSetData.cpp  AstroObjectSetData.h  AstroProgress.cpp  AstroProgress.h  AstroProgressData.cpp  AstroProgressData.h  AstroSetAspects.cpp  AstroSetAspects.h  AstroSetAspectsData.cpp  AstroSetAspectsData.h  AstroTransits.cpp  AstroTransits.h  AstroTransitsData.cpp  AstroTransitsData.h  AstroWidget.cpp  AstroWidget.h  CalcSettings.cpp  CalcSettings.h  CalcSettingsData.cpp  CalcSettingsData.h  ChartDetails.cpp  ChartDetails.h  (+72 more)
src/swe/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README
src/swe/doc/: Makefile.am  Makefile.in
src/swe/src/: Makefile.am  Makefile.in  fixstars.cat  seasnam.txt  swecl.c  swedate.c  swedate.h  swedll.h  swehel.c  swehouse.c  swelocal.h  swemmoon.c  sweodef.h  swepcalc.c  swepcalc.h  sweph.c  sweph.h  swephexp.h  swephlib.h  swetest.c
