SUBDIRS = ast136
EXTRA_DIST = atlas.txt fixstars.cat seas_18.se1 seasnam.txt seasnam_named.txt seasnam_tno.txt seorbel.txt sepl_18.se1\
             dofitorb.sh dofitorbunn.sh dofitorbneo.sh docentfle.sh dotnofle.sh \
             doastfle.sh dobarinit.sh alltno.sh doorb9tno.sh doorb9astdir.sh \
             fitobs.inp fitobs.inp.riyalfle fitobs.inp.riyalfleast input.fop \
             inbaricsun.opt.in astorb2orb9.sh \
		gensxastdir.sh   gensxtno.sh gentartno.sh input.foptno \
		mkastdir.sh select.sh selecttno.sh
astrolog_DATA = atlas.txt fixstars.cat seas_18.se1 seasnam.txt seorbel.txt sepl_18.se1
aastrologdir = $(datadir)/${PACKAGE}/ephe
astrologdir = $(datadir)/${PACKAGE}/ephe
